// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Featured reducer should return initialState 1`] = `
Object {
  "message": "",
  "playlists": Object {
    "items": Array [],
  },
}
`;

exports[`Featured reducer should return new state for FETCH_FEATURED_PLAYLISTS_SUCCEEDED action 1`] = `
Object {
  "message": "foo",
  "playlists": Object {
    "bar": "baz",
    "items": Array [],
  },
}
`;
